CB-15993 Refactor RdsView and extract logic into a converter. com.sequenceiq.cloudbreak.template.views.RdsView (template-manager-core) has a nasty constructor logic that makes writing UT much more complex than needed.